--- a/Blocks/page/page.css
+++ b/Blocks/page/page.css
@@ -1,5 +1,10 @@
 .page {
     position: relative;
     background: #2A2C2F;
+    font-family: "Inter", Arial, sans-serif;
+    background-color: #2a2c2f;
+    width: 100%;
+    min-width: 160px;
+    margin: 0 auto;
 }
 
