--- a/Blocks/places/place/__paragraph/place__paragraph.css
+++ b/Blocks/places/place/__paragraph/place__paragraph.css
@@ -18,5 +18,6 @@ color: #FFFFFF;
 @media screen and (min-width: 320px)and (max-width: 767px) {
    .place__paragraph { 
         font-size: 16px;
+        margin-left: 16px;
     }
 }
