--- a/Blocks/places/place/__url-heading/place__url-heading.css
+++ b/Blocks/places/place/__url-heading/place__url-heading.css
@@ -10,3 +10,9 @@
     
     color: #AAAAAA;
     }
+
+    @media screen and (min-width: 320px)and (max-width: 767px) {
+        .place__url-heading { 
+             margin-left: 16px;
+         }
+     }
