--- a/Blocks/lead/__subtitle/lead__subtitle.css
+++ b/Blocks/lead/__subtitle/lead__subtitle.css
@@ -1,11 +1,13 @@
 .lead__subtitle {
 margin: 0 auto;
-padding: 32px auto 64px auto;
+padding-top: 32px;
+padding-bottom: 64px;
 font-family: Inter;
 font-style: normal;
 font-weight: normal;
 font-size: 30px;
 line-height: 36px;
+max-width: 640px;
 /* or 120% */
 
 text-align: center;
@@ -15,19 +17,21 @@ color: #FFFFFF;
 
 @media screen and (min-width: 1024px)and (max-width: 1279px) {
     .lead__subtitle { 
-    padding: 28px 48px 48px 48px;
+    padding-bottom: 56px;
      }
 }
 
 @media screen and (min-width: 768px)and (max-width: 1023px) {
     .lead__subtitle { 
-        padding: 28px 24px 48px 24px;
-
+        padding-bottom: 56px;
      }
 }
 
 @media screen and (min-width: 320px)and (max-width: 767px) {
     .lead__subtitle { 
+        max-width: 288px;
+        padding-top: 16px;
+        padding-bottom: 40px;
         font-size: 16px;
         line-height: 20px;
      }
