--- a/pages/index.css
+++ b/pages/index.css
@@ -1,37 +1,37 @@
 @import url(../vendor/normalize.css);
 @import url(../fonts/inter.css);
-@import url(../Blocks/root/root.css);
-@import url(../Blocks/page/page.css);
-@import url(../Blocks/header/header.css);
-@import url(../Blocks/header/__logo/header__logo.css);
-@import url(../Blocks/header/__lang-links/__lang-links.css);
-@import url(../Blocks/header/__lang-link/__lang-link.css);
-@import url(../Blocks/header/__lang-link/_active/header__lang-link_active.css);
-@import url(../Blocks/lead/lead.css);
-@import url(../Blocks/lead/__title/lead__title.css);
-@import url(../Blocks/lead/__subtitle/lead__subtitle.css);
-@import url(../Blocks/lead/__image/lead__image.css);
-@import url(../Blocks/lead/__caption/lead__caption.css);
-@import url(../Blocks/lead/__figure/lead__figure.css);
-@import url(../Blocks/intro/intro.css);
-@import url(../Blocks/intro/__title/intro__title.css);
-@import url(../Blocks/intro/__text/intro__text.css);
-@import url(../Blocks/intro/__list/intro__list.css);
-@import url(../Blocks/photo-grid/photo-grid.css);
-@import url(../Blocks/photo-grid/__item/photo-grid__item.css);
-@import url(../Blocks/places/places.css);
-@import url(../Blocks/places/place/place.css);
-@import url(../Blocks/places/place/__website/place__website.css);
-@import url(../Blocks/places/place/__image/place__image.css);
-@import url(../Blocks/places/place/__title/place__title.css);
-@import url(../Blocks/places/place/__paragraph/place__paragraph.css);
-@import url(../Blocks/places/place/__link/place__link.css);
-@import url(../Blocks/places/place/__url-heading/place__url-heading.css);
-@import url(../Blocks/cover/cover.css);
-@import url(../Blocks/cover/__link/cover__link.css);
-@import url(../Blocks/cover/__title/cover__title.css);
-@import url(../Blocks/cover/__subtitle/cover__subtitle.css);
-@import url(../Blocks/footer/footer.css);
-@import url(../Blocks/footer/__copyright/footer__copyright.css);
-@import url(../Blocks/footer/__links/__link/footer__link.css);
-@import url(../Blocks/footer/__links/footer__links.css);
+@import url(../blocks/page/page.css);
+@import url(../blocks/header/header.css);
+@import url(../blocks/header/__logo/header__logo.css);
+@import url(../blocks/header/__lang-links/__lang-links.css);
+@import url(../blocks/header/__lang-link/__lang-link.css);
+@import url(../blocks/header/__lang-link/_active/header__lang-link_active.css);
+@import url(../blocks/lead/lead.css);
+@import url(../blocks/lead/__title/lead__title.css);
+@import url(../blocks/lead/__subtitle/lead__subtitle.css);
+@import url(../blocks/lead/__image/lead__image.css);
+@import url(../blocks/lead/__caption/lead__caption.css);
+@import url(../blocks/lead/__figure/lead__figure.css);
+@import url(../blocks/intro/intro.css);
+@import url(../blocks/intro/__title/intro__title.css);
+@import url(../blocks/intro/__text/intro__text.css);
+@import url(../blocks/intro/__list/intro__list.css);
+@import url(../blocks/intro/__number/intro__number.css);
+@import url(../blocks/photo-grid/photo-grid.css);
+@import url(../blocks/photo-grid/__item/photo-grid__item.css);
+@import url(../blocks/places/places.css);
+@import url(../blocks/place/place.css);
+@import url(../vlocks/place/__website/place__website.css);
+@import url(../blocks/place/__image/place__image.css);
+@import url(../blocks/place/__title/place__title.css);
+@import url(../blocks/place/__paragraph/place__paragraph.css);
+@import url(../blocks/place/__link/place__link.css);
+@import url(../blocks/place/__url-heading/place__url-heading.css);
+@import url(../blocks/cover/cover.css);
+@import url(../blocks/cover/__link/cover__link.css);
+@import url(../blocks/cover/__title/cover__title.css);
+@import url(../blocks/cover/__subtitle/cover__subtitle.css);
+@import url(../blocks/footer/footer.css);
+@import url(../blocks/footer/__copyright/footer__copyright.css);
+@import url(../blocks/footer/__links/__link/footer__link.css);
+@import url(../blocks/footer/__links/footer__links.css);
