--- a/blocks/intro/__title/intro__title.css
+++ b/blocks/intro/__title/intro__title.css
@@ -6,7 +6,7 @@ font-weight: 900;
 font-size: 54px;
 line-height: 58px;
 margin-top: 0;
-/* identical to box height, or 107% */
+margin-bottom: 40px;
 color: #FFFFFF;
 }
 
