--- a/blocks/place/__url-heading/place__url-heading.css
+++ b/blocks/place/__url-heading/place__url-heading.css
@@ -4,11 +4,9 @@
     font-weight: normal;
     font-size: 12px;
     line-height: 12px;
-    /* identical to box height, or 100% */
-    
     letter-spacing: 0.2em;
-    
     color: #AAAAAA;
+    text-transform: uppercase;
     }
 
     @media screen and (min-width: 320px)and (max-width: 767px) {
