--- a/blocks/footer/__links/footer__links.css
+++ b/blocks/footer/__links/footer__links.css
@@ -1,6 +1,9 @@
 .footer__links {
     display: flex;
     align-items: flex-start;
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
 }
 
 @media screen and (min-width: 320px)and (max-width: 767px) {
