--- a/blocks/header/__lang-link/__lang-link.css
+++ b/blocks/header/__lang-link/__lang-link.css
@@ -1,18 +1,20 @@
 .header__lang-link{
-    color: #ffffff;
-    text-decoration: none;
-    font-family: Inter;
+color: #ffffff;
+text-decoration: none;
+font-family: Inter;
 font-style: normal;
 font-weight: normal;
 font-size: 24px;
 line-height: 28px;
-/* identical to box height, or 117% */
-
 text-align: right;
 }
 
 .header__lang-link:last-child {
     margin-left: 18px;
+}
+
+.header__lang-link:hover {
+    opacity: 0.8;
 }
 
 @media screen and (min-width: 320px)and (max-width: 767px) {
