--- a/blocks/place/__paragraph/place__paragraph.css
+++ b/blocks/place/__paragraph/place__paragraph.css
@@ -1,17 +1,24 @@
 .place__paragraph {
- margin-top: 0;
+margin: 0;
+margin-bottom: 26px;
 font-family: Inter;
 font-style: normal;
 font-weight: normal;
 font-size: 18px;
 line-height: 163%;
-/* or 29px */
 color: #FFFFFF;
+}
+
+@media screen and (min-width: 1024px)and (max-width: 1279px) {
+    .place__paragraph { 
+        margin-bottom: 27px;
+     }
 }
 
 @media screen and (min-width: 768px)and (max-width: 1023px) {
     .place__paragraph { 
         font-size: 16px;
+        margin-bottom: 25px;
      }
 }
 
@@ -20,5 +27,6 @@ color: #FFFFFF;
         font-size: 16px;
         max-width: 288px;
         margin-left: 16px;
+        margin-bottom: 25px;
     }
 }
