--- a/blocks/place/__website/place__website.css
+++ b/blocks/place/__website/place__website.css
@@ -1,4 +1,11 @@
 .place__website {
     align-self: end;
-    
+    margin: 0;
 }
+
+@media screen and (min-width: 320px)and (max-width: 767px) {
+    .place__website { 
+
+     }
+ 
+ }
