--- a/fonts/inter.css
+++ b/fonts/inter.css
@@ -1,5 +1,5 @@
 @font-face {
-  font-family: 'Inter';
+  font-family: 'Inter', ‘Arial’, sans-serif;
   font-style:  normal;
   font-weight: 400;
   font-display: swap;
@@ -7,7 +7,7 @@
        url("./Inter-Regular.woff") format("woff");
 }
 @font-face {
-  font-family: 'Inter';
+  font-family: 'Inter', ‘Arial’, sans-serif;
   font-style:  normal;
   font-weight: 700;
   font-display: swap;
@@ -15,7 +15,7 @@
        url("./Inter-Bold.woff") format("woff");
 }
 @font-face {
-  font-family: 'Inter';
+  font-family: 'Inter', ‘Arial’, sans-serif;
   font-style:  normal;
   font-weight: 900;
   font-display: swap;
