--- a/blocks/lead/__subtitle/lead__subtitle.css
+++ b/blocks/lead/__subtitle/lead__subtitle.css
@@ -2,7 +2,7 @@
 margin: 0 auto;
 padding-top: 32px;
 padding-bottom: 64px;
-font-family: Inter;
+font-family: 'Inter', 'Arial', sans-serif;
 font-style: normal;
 font-weight: normal;
 font-size: 30px;
