--- a/blocks/place/__url-heading/place__url-heading.css
+++ b/blocks/place/__url-heading/place__url-heading.css
@@ -1,5 +1,5 @@
 .place__url-heading {
-    font-family: Inter;
+    font-family: 'Inter', 'Arial', sans-serif;
     font-style: normal;
     font-weight: normal;
     font-size: 12px;
@@ -11,6 +11,7 @@
 
     @media screen and (min-width: 320px)and (max-width: 767px) {
         .place__url-heading { 
-             margin-left: 16px;
+            margin: 0;
+            margin-left: 16px;
          }
      }
