--- a/blocks/header/__lang-link/header__lang-link.css
+++ b/blocks/header/__lang-link/header__lang-link.css
@@ -1,7 +1,7 @@
 .header__lang-link{
 color: #ffffff;
 text-decoration: none;
-font-family: Inter;
+font-family: 'Inter', 'Arial', sans-serif;
 font-style: normal;
 font-weight: normal;
 font-size: 24px;
