--- a/blocks/intro/__list/intro__list.css
+++ b/blocks/intro/__list/intro__list.css
@@ -1,6 +1,6 @@
 .intro__list {
 list-style: none;
-font-family: Inter;
+font-family: 'Inter', 'Arial', sans-serif;
 font-style: normal;
 font-weight: bold;
 font-size: 12px;
