--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -1,6 +1,6 @@
 .page {
     position: relative;
-    font-family: "Inter", Arial, sans-serif;
+    font-family: 'Inter', 'Arial', sans-serif;
     background-color: #2a2c2f;
     width: 100%;
     min-width: 160px;
