--- a/blocks/place/__paragraph/place__paragraph.css
+++ b/blocks/place/__paragraph/place__paragraph.css
@@ -1,7 +1,7 @@
 .place__paragraph {
 margin: 0;
 margin-bottom: 26px;
-font-family: Inter;
+font-family: 'Inter', 'Arial', sans-serif;
 font-style: normal;
 font-weight: normal;
 font-size: 18px;
