--- a/blocks/place/__title/place__title.css
+++ b/blocks/place/__title/place__title.css
@@ -1,7 +1,8 @@
 .place__title {
     margin: 0;
+    align-self: end;
     max-width: 460px;
-    font-family: Inter;
+    font-family: 'Inter', 'Arial', sans-serif;
     font-style: normal;
     font-weight: 900;
     font-size: 72px;
@@ -21,6 +22,6 @@
         font-size: 32px;
         line-height: 35px;
         max-width: 288px;
-        margin: 16px;
+        margin-left: 16px;
     }
 }
